# ghastly

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: build.yml  pre-commit.yml
ghastly/: Cargo.toml
ghastly-macros/: Cargo.toml
ghastly-macros/src/: lib.rs
ghastly/src/: lib.rs  main.rs  parse.rs
ghastly/src/checks/: mod.rs  permissions.rs
ghastly/src/parser/: expression.rs  mod.rs  workflow.rs
ghastly/src/policies/: expressions.rs  mod.rs  permissions.rs
src/: error.rs  lib.rs  main.rs
src/checks/: mod.rs
