[package]
name = "ghastly"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
marked-yaml = { version = "0.7.2", features = ["serde"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_either = "0.2.1"
thiserror = "2.0.11"
ghastly-macros = { path = "ghastly-macros" }
inventory = "0.3.19"
